--- a/test.ipynb
+++ b/test.ipynb
@@ -178,6 +178,26 @@
     "\n",
     "print(\"批量补充完成，已保存至新文件.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['', '']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"/\".split(\"/\")"
+   ]
   }
  ],
  "metadata": {
