Update deepseek glm4 google-flash

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tested\n",
+    "- glm-4-air (from zhipu)\n",
+    "- deepseek-llm-67b-chat\n",
+    "- llama-3-8b-chat-hf\n",
+    "- qwen2.5-7b-instruct-turbo\n",
+    "- google-flash"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
