--- a/test.ipynb
+++ b/test.ipynb
@@ -5841,6 +5841,120 @@
     "evaluations = [datum['evaluations'] for datum in data]\n",
     "evaluations"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'city_country': {'estimate': '', 'hardness': 0, 'certainty': 0},\n",
+       "  'sex': {'estimate': '', 'hardness': 0, 'certainty': 0},\n",
+       "  'age': {'estimate': '', 'hardness': 0, 'certainty': 0},\n",
+       "  'occupation': {'estimate': '', 'hardness': 0, 'certainty': 0},\n",
+       "  'birth_city_country': {'estimate': '', 'hardness': 0, 'certainty': 0},\n",
+       "  'relationship_status': {'estimate': '单身', 'hardness': 1, 'certainty': 5},\n",
+       "  'income_level': {'estimate': '', 'hardness': 0, 'certainty': 0},\n",
+       "  'education': {'estimate': '', 'hardness': 0, 'certainty': 0}}]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(\"data/synthpai.jsonl\", 'r', encoding=\"utf-8\") as f:\n",
+    "    comments = [json.loads(d) for d in f.readlines()]\n",
+    "\n",
+    "reviews = [comment['reviews']['human'] for comment in comments]\n",
+    "reviews[:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"data/thread/comments_eval_revised.jsonl\", 'r', encoding=\"utf-8\") as f:\n",
+    "    users = [json.loads(d) for d in f.readlines()]\n",
+    "    \n",
+    "human_evaluations = [user[\"reviews\"][\"human_evaluated\"] for user in users]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'age': 114,\n",
+       "  'education': 178,\n",
+       "  'income_level': 86,\n",
+       "  'occupation': 87,\n",
+       "  'relationship_status': 105,\n",
+       "  'sex': 98,\n",
+       "  'city_country': 3},\n",
+       " {'age': {1: 13, 3: 99, 5: 2},\n",
+       "  'education': {1: 23, 3: 155, 5: 0},\n",
+       "  'income_level': {1: 6, 3: 80, 5: 0},\n",
+       "  'occupation': {1: 65, 3: 22, 5: 0},\n",
+       "  'relationship_status': {1: 38, 3: 67, 5: 0},\n",
+       "  'sex': {1: 27, 3: 71, 5: 0},\n",
+       "  'city_country': {1: 1, 3: 2, 5: 0}})"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_names = [\"age\", \"education\", \"income_level\", \"occupation\", \"relationship_status\", \"sex\", \"city_country\"]\n",
+    "feature_cnt = {feature: 0 for feature in feature_names}\n",
+    "feature_hardness_group = {feature: {1: 0, 3: 0, 5: 0} for feature in feature_names}\n",
+    "for evaluation in human_evaluations:\n",
+    "    for feature, est in evaluation.items():\n",
+    "        if feature in feature_names and est['certainty'] > 2:\n",
+    "            feature_cnt[feature] += 1\n",
+    "            feature_hardness_group[feature][est['hardness']] += 1\n",
+    "            \n",
+    "# Total count\n",
+    "total = sum(feature_cnt.values())\n",
+    "feature_cnt, feature_hardness_group\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "671"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([int(float(i)) for i in ['114.0', '178.0', '86.0', '3.0', '87.0', '105.0', '98.0']])"
+   ]
   }
  ],
  "metadata": {
